Added metrics about our systems that required prometheus integration and logging mechanism on api module
