# api/api/api.yml
@@ -120,3 +120,10 @@ components:
               format: int32
           status:
             type: string
+    Metric:
+      type: object
+      properties:
+        metricType:
+          type: string
+        metricValue:
+          type: object
